Revert project to JDK 8