@@ -23,6 +23,4 @@ task runDebugApplication(type: JavaExec) {
 	mainClass = 'v620.cosmic.debug.DebugApplication'
 	classpath = sourceSets.main.runtimeClasspath
 	workingDir = rootProject.projectDir
-	jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
-			'--add-opens', 'java.base/java.lang.ref=ALL-UNNAMED'
 }
